# my_first_ros2_robot

./: CMakeLists.txt  package.xml
launch/: spawn.py
src/: custom_drive.cpp
src/my_package/: CMakeLists.txt  package.xml
src/my_package/config/: ekf1.yaml
src/my_package/launch/: check_urdf.launch.py  mspawn.launch.py  spawn.launch.py  world.launch.py
src/my_package/rviz/: my_robot.rviz  new.rviz
src/my_package/src/: claude_obstacle_avoider.py  gps_waypoint_follower.py  gps_waypoint_follower_rviz_pose  lane_detector.py  obstacle_avoider.py
src/my_package/urdf/: my_robot.gazebo  my_robot.urdf
src/my_package/worlds/: empty.sdf  lane_follower.sdf  lane_world.sdf  race_track.sdf  race_track_generator.py  world.sdf
urdf/: my_robot.urdf
worlds/: my_world.sdf
